django/celery-flower-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-flower
  labels:
    app: django
    component: celery-flower
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
      component: celery-flower
  template:
    metadata:
      labels:
        app: django
        component: celery-flower
    spec:
      containers:
        - name: celery-flower
          image: worldhistoricalgazetteer/web:latest
          command: ["celery", "-A", "whg", "flower", "--broker=redis://redis:6379/0"]
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
          volumeMounts:
            - name: shared-volume
              mountPath: /shared-data
          readinessProbe:
            exec:
              command:
                - "sh"
                - "-c"
                - "celery -A whg inspect ping || exit 1"  # Exit non-zero if ping fails
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: shared-volume
          emptyDir: {}
