django/celery-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
  labels:
    app: django
    component: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
      component: celery-worker
  template:
    metadata:
      labels:
        app: django
        component: celery-worker
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: celery-worker
          image: worldhistoricalgazetteer/web:latest
          command: ["celery", "-A", "whg", "worker", "--loglevel=debug"]
          resources:
            limits:
              memory: "2Gi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
          volumeMounts:
            - name: shared-volume
              mountPath: /shared-data
            - name: app
              mountPath: /app
            - name: static-files
              mountPath: /app/static
            - name: media-files
              mountPath: /app/media
            - name: config-volume
              mountPath: /app/config/configMap
              readOnly: true
            - name: secret-volume
              mountPath: /app/config/secret
              readOnly: true
            - name: whg-local-settings
              mountPath: /app/whg/local_settings.py
            - name: whg-ca-cert
              mountPath: /app/whg/authorisation/ca-cert.pem
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pgrep -f "celery worker"
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pgrep -f "celery worker"
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          startupProbe: # Wait until redis is available
            exec:
              command:
                - "sh"
                - "-c"
                - "echo PING | nc redis 6379 | grep -q PONG"
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 5
      volumes:
        - name: shared-volume
          emptyDir: {}
        - name: app
          persistentVolumeClaim:
            claimName: django-app-pvc
        - name: static-files
          persistentVolumeClaim:
            claimName: django-static-pvc
        - name: media-files
          persistentVolumeClaim:
            claimName: django-media-pvc
        - name: config-volume
          configMap:
            name: whg-config
        - name: secret-volume
          secret:
            secretName: whg-secret
