django/postgres-deployment.yaml
# PostgreSQL Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      serviceAccountName: postgres-service-account
      containers:
        - name: postgres
          image: postgis/postgis:15-3.4
          ports:
            - containerPort: 5432
          command: [ "postgres", "-c", "hba_file=/etc/postgresql/pg_hba.conf", "-c", "config_file=/etc/postgresql/postgresql.conf" ]
          lifecycle:
            postStart:
                exec:
                    command:
                      - "/bin/sh"
                      - "-c"
                      - |
                        # Initialize pgBackRest stanza only once
                        if ! kubectl get job pgbackrest-stanza-init; then
                          kubectl create -f /etc/pgbackrest/pgbackrest-stanza-init.yaml
                        else
                          echo "Stanza already initialized."
                        fi
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
            - name: pg-hba-config
              mountPath: /etc/postgresql/pg_hba.conf
              subPath: pg-hba
            - name: pgbackrest-config
              mountPath: /etc/pgbackrest
              subPath: pgbackrest.conf
            - name: postgresql-config
              mountPath: /etc/postgresql/postgresql.conf
              subPath: postgresql.conf
            - name: pgbackrest-yaml
              mountPath: /etc/pgbackrest/pgbackrest-stanza-init.yaml
              subPath: pgbackrest-stanza-init.yaml
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 30
            periodSeconds: 20
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
            initialDelaySeconds: 5
            periodSeconds: 10

        - name: pgbackrest
          image: pgbackrest/pgbackrest:latest
          command:
            - pgbackrest
            - server
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
            - name: pgbackrest-config
              mountPath: /etc/pgbackrest
            - name: pgbackrest-backups
              mountPath: /var/lib/pgbackrest/backups
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
        - name: pg-hba-config
          configMap:
            name: whg-config
        - name: pgbackrest-config
          configMap:
            name: whg-config
        - name: postgresql-config
          configMap:
            name: whg-config
        - name: pgbackrest-yaml
          configMap:
            name: whg-config
        - name: pgbackrest-backups
          persistentVolumeClaim:
            claimName: pgbackrest-pvc
