django/webpack-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webpack
  labels:
    app: webpack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webpack
  template:
    metadata:
      labels:
        app: webpack
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: environment
                    operator: In
                    values:
                      - development
      containers:
      - name: webpack
        image: node:18-alpine
        command:
          - "/bin/sh"
          - "-c"
          - |
            echo "Starting Webpack watch in main container..."
            cd /config
            npx webpack --watch --config /config/webpack.config.js
        ports:
        - containerPort: 4000
        volumeMounts:
        - name: django-app-volume
          mountPath: /app
        - name: webpack-build-volume
          mountPath: /config
        workingDir: /app
      volumes:
      - name: webpack-source
        configMap:
          name: webpack-config
      - name: webpack-build-volume
        persistentVolumeClaim:
          claimName: webpack-build-pvc
      - name: django-app-volume
        persistentVolumeClaim:
          claimName: django-app-pvc
