django/django-service-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  type: NodePort
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30070  # Specify an external port
